     
  o  Simon Biggs for reporting a bug in fread'ing logicals. Test added.
  
  o  Jakub Szewczyk for reporting that where "." is used in formula interface of dcast.data.table along with an aggregate
     function, it did not result in aggregated result, #5149. Test added.
         dcast.data.table(x, a ~ ., mean, value.var="b")

NOTES

  o  If fread ignores colClasses, the message is upgraded to warning instead of just a line in verbose=TRUE mode.
  
  o  ?last has been improved and if xts is needed but not installed the error message is more helpful, #2728.
     Thanks to Sam Steingold for reporting.
     
  o  ?between corrected. It returns a logical not integer vector, #2671. Thanks to Michael Nelson for reporting.
  
  o  .SD,.N,.I,.GRP and .BY are now exported (as NULL). So that NOTEs aren't produced for them by R CMD check or
     codetools::checkUsage via compiler. utils::globalVariables() was considered, but exporting chosen.
     Thanks to Sam Steingold for raising, #2723.
     
  o  When DT is empty, DT[,col:=""] is no longer a warning. The warning was :
        Supplied 1 items to be assigned to 0 items of column (1 unused)
        
  o  Using rolltolast still works but now issues the following warning :
        "'rolltolast' has been marked 'deprecated' in ?data.table since v1.8.8 on CRAN 3 Mar 2013, see NEWS. Please
         change to the more flexible 'rollends' instead. 'rolltolast' will be removed in the next version."

  o  The key is now retained in NA subsets; e.g.,
        DT = data.table(a=1:3,b=4:6,key="a")
        DT[NA]   # 1-row of NA now keyed by 'a'
        DT[5]    # 1-row of NA now keyed by 'a'
        DT[2:4]  # not keyed as before because NA (last row of result) sorts first in keyed data.table
  
  o  data.table now depends on R 2.14.0, now over 2 years old (Oct 2011)


        **********************************************
        **                                          **